Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/cast/7005671/T7005671.out
T7005671.java:12:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: byte[], X[])
T7005671.java:13:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: short[], X[])
T7005671.java:14:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: int[], X[])
T7005671.java:15:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: long[], X[])
T7005671.java:16:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: float[], X[])
T7005671.java:17:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: double[], X[])
T7005671.java:18:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: char[], X[])
T7005671.java:19:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: boolean[], X[])
T7005671.java:23:29: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: X[], byte[])
T7005671.java:24:30: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: X[], short[])
T7005671.java:25:28: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: X[], int[])
T7005671.java:26:29: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: X[], long[])
T7005671.java:27:30: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: X[], float[])
T7005671.java:28:31: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: X[], double[])
T7005671.java:29:29: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: X[], char[])
T7005671.java:30:32: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: X[], boolean[])
16 errors
